--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -6,6 +6,8 @@ permalink: /talks/2012-03-01-talk-1
 # venue: "UC San Francisco, Department of Testing"
 date: 2024-12-5
 # location: "San Francisco, CA, USA"
+category: "CyberSecurity"
+
 ---
  
 
