--- a/_posts/2025-05-05-blog-post-5.md
+++ b/_posts/2025-05-05-blog-post-5.md
@@ -1,3 +1,15 @@
+---
+title: 'Recovering from Accidental Git Commits (Large Files Edition)'
+date: 2025-05-05
+permalink: /posts/Technical/GitHub/2025/05/accidental-commit/
+excerpt: "This guide provides a clear, step-by-step manual for beginner to intermediate GitHub users on how to rectify these accidental large file commits, focusing on preventing future issues and, when necessary, surgically removing the oversized baggage from your repository's history."
+tags:
+  - GitHub
+  - Rewrite history
+---
+
+
+
 # Recovering from Accidental Git Commits (Large Files Edition)
 
 We've all been there. In the heat of development, you might accidentally commit a file to your local Git repository – maybe a bulky dataset, model parameters, a massive media asset, or something else that makes your repository groan under its weight. When you try to push, you're often met with a stern rejection from platforms like GitHub due to file size limits.
